Working dataset_gena and rnn and wandb

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 *.obj
 *.ply
+
+wandb
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+*.egg
+*.log
+*.csv
+*.h5
+*.json
+*.yaml
+*.yml
+*.png
+*.jpg
+*.jpeg
+*.bmp
+*.tiff
+*.gif
+*.webp
+*.mp4
+*.avi
